<resources>
    <string name="app_name">地下管线数据采集系统</string>
    <string name="local">当前\n位置</string>

    <string name="login">登录</string>
    <string name="appos">管线管理系统</string>
    <string name="registe">注 册</string>
    <string name="forgetpassword">忘记密码</string>
    <string name="input_name">请输入用户名</string>
    <string name="input_password">请输入登录密码</string>
    <string name="input_forgetpassword">请重复输入的登录密码</string>
    
    <string name="start_text">版权所有@山东中图软件技术有限公司</string>
    <string name="support_text">技术支持:0531-82922921</string>
</resources>