<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@mipmap/attachment">
        <LinearLayout
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/main_icon"
                android:src="@mipmap/ic_launcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_below="@id/main_icon"
                android:text="@string/app_name"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        style="@style/login_ll_base"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="0dp"
        android:layout_weight="2">


        <LinearLayout
            android:id="@+id/ll_open"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <EditText
                android:id="@+id/ed_name"
                style="@style/edittext_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_cheek_bg"
                android:drawableLeft="@mipmap/icon_username"
                android:hint="@string/input_name" />

            <EditText
                android:id="@+id/ed_password"
                style="@style/edittext_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bt_cheek_bg"
                android:drawableLeft="@mipmap/icon_password"
                android:hint="@string/input_password"
                android:inputType="textPassword" />
            <TextView
                android:id="@+id/bt_tologin"
                style="@style/bt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:text="@string/login" />

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_regisit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/registe"
                android:textColor="@color/blue" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</LinearLayout>